--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         .gameOver {
             position: fixed;
-            background-color: rgba(0,0,0,0.29);
+            background-color: rgba(0,0,0,0.95);
             color: red;
             padding-top: 20%;
             padding-bottom: 50%;
@@ -206,12 +206,22 @@
 <script src="js/jquery-3.2.1.js"></script>
 <script>
 
-
+    var gameRulesDisplay = localStorage.getItem('BestPartySnakeRules') || true;
+    if (gameRulesDisplay === true) {
     $('button#closeGameRules').click(function() {
         $('div#gamerules').toggle(700);
         $('div#board').toggle();
+        gameRulesDisplay = false;
+        localStorage.setItem('BestPartySnakeRules', JSON.stringify(gameRulesDisplay));
         playGame();
-    });
+    })
+    }
+    else {
+        $('div#gamerules').toggle();
+        $('div#board').toggle();
+        playGame();
+    }
+
 
 
 function playGame() {
@@ -397,8 +407,7 @@ function playGame() {
             freeAliens[i] = nextStep;
         }
 
-        $('.showGameTime').text(`Time: ${seconds} seconds`);
-console.log(freeAliens.length);
+        $('.showGameTime').text(`Time: ${seconds} seconds`)
 
     }, 220);
 
@@ -504,13 +513,14 @@ console.log(freeAliens.length);
     }
 
     function countTime() {
-        setInterval(
+         var three = setInterval(
             function () {
                 if (gameOver) {
                     stopGame();
+                    clearInterval(three);
                 } else {
                     seconds++;
-                }
+                   }
         }, 1000);
     }
 
@@ -561,7 +571,16 @@ console.log(freeAliens.length);
             refreshScores();
             $('.showGameTime').toggle();
             $('#scoresTopFive').toggle();
-            $('#playAgain').toggle();
+            $('#playAgainAfterScores').click(function() {
+                window.location.reload();
+                $('#scoresTopFive').toggle();
+                $('#board').toggle();
+
+
+                playGame();
+
+            });
+
 
 
 
@@ -598,7 +617,7 @@ console.log(freeAliens.length);
             $('.gameOver').toggle();
             $board.empty();
             $('.showGameTime').toggle();
-            playGame();
+            window.location.reload();
         });
     };
 
