--- a/index.html
+++ b/index.html
@@ -139,15 +139,49 @@
         .gameOver {
             position: fixed;
             background-color: rgba(0,0,0,0.95);
-            color: red;
-            padding-top: 20%;
+            padding-top: 30%;
             padding-bottom: 50%;
-            font-size: 8em;
             width: 100%;
             height: 100%;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+        }
+        .gameOver > div {
+        font-size: 8em;
+        }
+
+        .gameOver > button,
+        #scoresTopFive > button,
+        #saveScoreForm > form > button {
+            outline:none;
+            margin-top: 2em;
+            color: rgb(250, 175, 24);
+            height: 50px;
+            width: 180px;
+            font-size: 2em;
+            border: 2px solid;
+            background-color: black;
+        }
+
+        .gameOver > button:hover,
+        #scoresTopFive > button:hover,
+        #saveScoreForm > form > button:hover {
+            transform: scale(1.02);
+        }
+
+        form > p,
+        form > input {
+            display: block;
+            outline: none;
+            text-align: center;
+            margin-top: 1em;
+            color: white;
+            height: 50px;
+            width: 280px;
+            font-size: 2em;
+            border: none;
+            background-color: black;
         }
 
         .test{
@@ -156,6 +190,8 @@
             height: 25px;
             color: white;
         }
+
+
 
         #board,
         #saveScoreForm,
@@ -186,8 +222,8 @@
 
 <div id="saveScoreForm">
     <form >
-        <p>Enter your name</p>
-        <input type="text" value=""/>
+        <p>Enter your name:</p>
+        <input type="text" value="" autofocus/>
         <button>Save score</button>
     </form>
 </div>
