--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                     window.location.reload();
                     $('#scoresTopFive').toggle();
                     $('#board').toggle();
-
+                // space to deleting
 
                     playGame();
 
